test/Errors/bad_lvalue.expected
TranslationUnit
  Script
    Block
      AssignStmt suppressed
        LHS
          BinaryOp +
            IntegerLiteral 1
            IntegerLiteral 2
        RHS
          IntegerLiteral 3
Errors/bad_lvalue.m:1:2: error: expression is not assignable
  (1 + 2) = 3;
   ^
